# mujoco-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PRD.md  README.md  install-mcp.ps1  justfile  llms.txt  pyproject.toml  start.bat  start.ps1
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ASSESSMENT.md  MUJOCO_VS_OTHERS.md  SETUP.md  TOOLS.md
mcpb/: manifest.json  pack.ps1  requirements.txt
mcpb/assets/prompts/: system.md  user.md
mcpb/src/mujoco_mcp/: state_machine.py
scripts/: seed_depot.py
src/mujoco_mcp/: __init__.py  __main__.py  _sim_runner.py  server.py
tests/: test_backend.py  test_server.py
web_sota/: index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  vite.config.ts
web_sota/backend/: server.py
web_sota/backend/routes/: ai.py
web_sota/e2e/: fleet-audit.spec.ts
web_sota/src/: App.tsx  index.css
web_sota/src/pages/: Dashboard.tsx  Help.tsx  LLM.tsx  Logging.tsx  Models.tsx  Settings.tsx  Simulations.tsx
