[project]
name = "mujoco-mcp"
version = "0.2.0"
description = "General-purpose MuJoCo physics simulation via MCP"
requires-python = ">=3.11"
dependencies = ["fastmcp>=3.2", "mujoco>=3.2", "httpx>=0.28", "fastapi>=0.115", "uvicorn[standard]>=0.34"]

[project.scripts]
mujoco-mcp = "mujoco_mcp:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-mock>=3", "httpx>=0.28"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mujoco_mcp"]
